# WebShark

./: .gitignore  Cargo.toml  crates.js  help.html  index.html  settings.html  src-files.js
examples/controller/: user_controller.rs
search.index/: 0516b70052.js  0cf1777647.js  0fff2ff960.js  18342b0985.js  1ba31bba24.js  22317a2948.js  25947a6cd5.js  25b7dd81fa.js  2735a41b2b.js  2b07d01f0f.js  34d7eee441.js  3ce01f41a0.js  45146d80ca.js  476c965477.js  4df75485f5.js  53a06caf78.js  552914140e.js  56625c3231.js  5b5c0e5522.js  5bdf17a2e4.js  5c5eb19682.js  5cb8a428d0.js  5fada7c3fb.js  60940d2aa9.js  63b02d8818.js  64b7e9de35.js  655a6570a5.js  661ec52166.js  71a74b873e.js  79f903e353.js  root.js
search.index/crateNames/: 42c9cdb533.js
search.index/desc/: 3f7d5cbcc2.js
search.index/entry/: bc417cad6a.js
search.index/function/: 7ddd66042a.js
search.index/generic_inverted_index/: 4148b158bd.js
search.index/name/: 5f825d991f.js
search.index/normalizedName/: 6c9e246849.js
search.index/path/: 7b543a3015.js
search.index/type/: 799d40be0c.js
src/: lib.rs
src/domain/: email.rs  mod.rs  user_id.rs
src/utils/: authentication.rs  config_system.rs  mod.rs  request.rs  response.rs  route.rs  router.rs  scope.rs  socket_handler.rs
src/webshark/: lib.rs.html  server.rs.html
src/webshark/auth/: authentication.rs.html  mod.rs.html
src/webshark/dto/: mod.rs.html
src/webshark/http/: mod.rs.html  request.rs.html  response.rs.html
src/webshark/routing/: mod.rs.html  route.rs.html  route_handler.rs.html  router.rs.html  scope.rs.html  socket.rs.html  socket_context.rs.html  socket_handler.rs.html
src/webshark/utils/: config_system.rs.html  console_util.rs.html  mod.rs.html  other.rs.html  websocket.rs.html
src/webshark_cli/: command_handler.rs.html  main.rs.html
src/webshark_cli/commands/: mod.rs.html  new.rs.html
src/webshark_macros/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
webshark/: all.html  index.html  sidebar-items.js
webshark-cli/: Cargo.toml
webshark-cli/src/: command_handler.rs  main.rs
webshark-core/: Cargo.toml
webshark-core/src/: lib.rs  server.rs
webshark-core/src/auth/: authentication.rs
webshark-core/src/config/: builder.rs  component.rs  config_traits.rs  mod.rs  raw_toml.rs  server_config.rs
webshark-core/src/domain/: user.rs
webshark-core/src/dto/: mod.rs
webshark-core/src/dto/domain/: mod.rs
webshark-core/src/http/: request.rs  response.rs
webshark-core/src/http_util/: mod.rs  request.rs
webshark-core/src/http_util/parsers/: http1_parser.rs  http2_parser.rs  mod.rs
webshark-core/src/resources/: config.toml
webshark-core/src/routing/: mod.rs  route.rs  route_handler.rs  router.rs  scope.rs  socket.rs  socket_context.rs  socket_handler.rs
webshark-core/src/utils/: config_system.rs  console_util.rs  mod.rs  other.rs  route_handler.rs  server.rs  socket.rs  websocket.rs
webshark-core/tests/: integration_test.rs
webshark-demo/: Cargo.toml
webshark-demo/src/: main.rs  main_v2.rs
webshark-macros/: Cargo.toml
webshark-macros/src/: lib.rs  utils.rs
webshark/auth/: index.html  sidebar-items.js
webshark/dto/: index.html
webshark/http/: index.html
webshark/routing/: index.html  sidebar-items.js
webshark/server/: fn.handle_client.html  fn.validate_cors_and_origin.html  fn.websocket_handler.html  index.html  sidebar-items.js  struct.Server.html
webshark/utils/: index.html  sidebar-items.js
webshark_cli/: all.html  fn.main.html  index.html  sidebar-items.js
webshark_cli/command_handler/: index.html  sidebar-items.js  struct.Cli.html  struct.Command.html  type.CommandHandler.html
webshark_cli/commands/: index.html  sidebar-items.js
webshark_macros/: all.html  attr.delete.html  attr.get.html  attr.post.html  attr.put.html  attr.websocket.html  index.html  sidebar-items.js
(+102 files in other folders)
