[package]
name = "webshark"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1.23.0", features = ["v4", "v7"] }

rand = { version = "*"}

serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
toml = "0.8"
bincode = "1.3.3"
bytes = "1.11.1"
matchit = "0.9.0"

mime = "0.3.17"

base64 = "0.22"
sha1 = "0.11.0"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

cookie = { version = "0.18.1", features = ["percent-encode", "signed", "private", "key-expansion"] }
http = { version = "1.4.0" }

[features]
default = []

domain = []